--- a/theia-widget-generator/kuksa/kuksa/package.json
+++ b/theia-widget-generator/kuksa/kuksa/package.json
@@ -9,8 +9,8 @@
     "src"
   ],
   "dependencies": {
-    "@theia/core": "latest"
-
+    "@theia/core": "latest",
+    "@theia/terminal": "latest"
   },
   "devDependencies": {
     "rimraf": "latest",
