--- a/theia-widget-generator/package.json
+++ b/theia-widget-generator/package.json
@@ -16,6 +16,8 @@
   "author": "Ericsson",
   "license": "Apache-2.0",
   "dependencies": {
+    "@theia/terminal": "^0.8.0",
+    "terminal-in-react": "^4.3.1",
     "yeoman-generator": "^3.1.1"
   },
   "devDependencies": {
